<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/light_grey"
    android:orientation="vertical"
    android:gravity="center"
    >


    <TextView
        android:text="@string/titulo"
        android:textSize="20sp"
        android:textColor="@color/cor_titulo"
        android:fontFamily="@font/manrope_extrabold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="33dp"
        android:gravity="center"
        android:layout_marginTop="19dp"
        />

    //Não Consegio colocar o hint original -.-
    <com.blackcat.currencyedittext.CurrencyEditText
        android:id="@+id/input_brl"
        android:hint="@string/hint1"
        android:textColorHint="@color/grey"
        android:fontFamily="@font/manrope_regular"
        android:textSize="14sp"
        android:layout_width="341dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="22dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/borda_arredondada_cinza"
        android:paddingLeft="14.5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginLeft="8dp"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="24.5dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:layout_weight="1"

        >



        <RelativeLayout
            android:id="@+id/botao1"
            android:background="@drawable/borda_redonda_branca"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="15.5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/flag_mask">
                <ImageView
                    android:src="@drawable/usa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                </RelativeLayout>
                <TextView
                    android:text="@string/dolar"
                    android:textSize="14sp"
                    android:layout_marginTop="3.5dp"
                    android:fontFamily="@font/manrope_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/botao2"
            android:background="@drawable/borda_redonda_branca"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="15.5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:src="@drawable/mex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/flag_mask"
                    />
                <TextView
                    android:text="@string/euro"
                    android:textSize="14sp"
                    android:layout_marginTop="3.5dp"
                    android:fontFamily="@font/manrope_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="24.5dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:id="@+id/botao3"
            android:background="@drawable/borda_redonda_branca"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="15.5dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:src="@drawable/rus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/flag_mask"
                    />
                <TextView
                    android:text="@string/rublo"
                    android:textSize="14sp"
                    android:layout_marginTop="3.5dp"
                    android:fontFamily="@font/manrope_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/botao4"
            android:background="@drawable/borda_redonda_branca"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="15.5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:src="@drawable/ar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/flag_mask"
                    />
                <TextView
                    android:text="@string/dirra"
                    android:textSize="14sp"
                    android:layout_marginTop="3.5dp"
                    android:fontFamily="@font/manrope_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="24.5dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:id="@+id/botao5"
            android:background="@drawable/borda_redonda_branca"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="15.5dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:src="@drawable/jap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/flag_mask"
                    />
                <TextView
                    android:text="@string/iene"
                    android:textSize="14sp"
                    android:layout_marginTop="3.5dp"
                    android:fontFamily="@font/manrope_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/botao6"
            android:background="@drawable/borda_redonda_branca"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="15.5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:src="@drawable/ind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/flag_mask"
                    />
                <TextView
                    android:text="@string/rupia"
                    android:textSize="14sp"
                    android:layout_marginTop="3.5dp"
                    android:fontFamily="@font/manrope_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.0">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_marginHorizontal="24.5dp"
        android:background="@drawable/borda_redonda_branca"
        android:paddingTop="19dp"
        android:paddingLeft="52dp"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/currency_name"
                android:text=""
                android:fontFamily="@font/manrope_semibold"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/currency_value"
                    android:text=""
                    android:textSize="14sp"
                    android:layout_below="@+id/currency_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </RelativeLayout>
    </RelativeLayout>
    </LinearLayout>



</LinearLayout>